--- a/themes/landscape/layout/_partial/footer.ejs
+++ b/themes/landscape/layout/_partial/footer.ejs
@@ -6,7 +6,7 @@
     <div id="footer-info" class="inner">
       &copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %><br>
       <%= __('powered_by') %> <a href="http://hexo.io/" target="_blank">Hexo</a>
-      <a href="http://www.beian.miit.gov.cn/">湘ICP备18007266号</a>
+      <a href="https://beian.miit.gov.cn/">湘ICP备18007266号</a>
     </div>
   </div>
 </footer>
